# fastApi-stage-6

./: .env  Readme.md  db.py  main.py  pyproject.toml
config/: config.py
controller/: auth.py  product.py
middlewares/: dependencies.py  utilities.py
model/: product.py  user.py
services/: auth_service.py  email_service.py  product_service.py
